--- a/views/detail.jade
+++ b/views/detail.jade
@@ -3,224 +3,75 @@ block vars
 extends layouts/layout
 block main
 	.hm-sec-blk
-		.prd-info-blk
-			.container
-				.nav-info-ct.clearfix
-					.nav-info-left.f-l
-						ul
-							li.ico-home
-								a(href="index.html")
-									img(alt=" " src="images/ico-home.png")
-							li
-								a(href="#")
-									|Điện thoại
-							li.had-dropdown
-								a(href="#").nav-info-itm
-									|Samsung
-							li.last-child
-								a(href="#").nav-info-itm
-									|Note5 bản châu Âu
-					.nav-info-right.f-r
-						li
-							a(href="#").nav-info-itm
-								img(alt=" " src="images/ico-sort.png")
-						li.had-dropdown
-							|Xếp theo: 
-							a(href="#").nav-info-itm
-								b  Hàng mới về
-	.hm-sec-blk
-		.prod-detail-blk
-			.container
-				.prod-detail-itm
-					.row
-						.col-md-5
-							.igm-prod
-								a(href="images/iphone-detail.png" data-lightbox="groupdsf" data-title="My caption")
-									figure
-										img(alt=" " src="images/iphone-detail.png")
-								span.promo-dec10percen
-							.slick-slider
-								a(href="images/img-slick.png" data-lightbox="groupdsf" data-title="My caption")
-									figure
-										img(alt=" " src="images/img-slick.png")
-								a(href="images/img-slick.png" data-lightbox="groupdsf" data-title="My caption")
-									figure
-										img(alt=" " src="images/img-slick.png")
-								a(href="images/img-slick.png" data-lightbox="groupdsf" data-title="My caption")
-									figure
-										img(alt=" " src="images/img-slick.png")
-								a(href="images/img-slick.png" data-lightbox="groupdsf" data-title="My caption")
-									figure
-										img(alt=" " src="images/img-slick.png")
-								a(href="images/img-slick.png" data-lightbox="groupdsf" data-title="My caption")
-									figure
-										img(alt=" " src="images/img-slick.png")
-								a(href="images/img-slick.png" data-lightbox="groupdsf" data-title="My caption")
-									figure
-										img(alt=" " src="images/img-slick.png")
-								a(href="images/img-slick.png" data-lightbox="groupdsf" data-title="My caption")
-									figure
-										img(alt=" " src="images/img-slick.png")
-							.more-info
-								li.had-border
-									a(href="#")
-										<i class="fa fa-th-list" aria-hidden="true"></i>
-										|Xem thống kê
-								li
-									a(href="#")
-										|Phụ kiện(23)
-							.more-comment
-								p 354 Bình luận
-							.about-prod
-								span.txt-bold BlackBerry Passport
-								|&nbsplà chiếc điện thoại thông minh mới nhất, cao cấp nhất của BlackBerry vửa ra mắt. Đây là chiếc BlackBerry mang rất nhiều sự đột phá về cấu hình và là "con át chủ bài" năm 2014 của hãng điện tử Canada.
-								p.txt-bold Hàng công ty màu đen giá: 11,999,000đ 
-								p.txt-bold Hàng xách tay màu đen, giá: 10,299,000đ
-						.col-md-7
-							.prod-detail-title
-								p.txt-title iPhone 6s 32GB Global
-								p
-									span.txt-price 19.890.000 Đ
-									span.txt-space-r (Hàng chính hãng, đã có VAT 10%)
-							p Giá cũ 
-								span.txt-old-price 20.190.000 Đ 
-								span.txt-space-r.txt-boid Tiết kiệm 980.000 Đ (20%)
-							.choose-color
-								p * Chọn màu để xem giá
-								button.box-color-first
-								button.box-color-second
-								button.box-color-thirth
-							.status-prod-detail
-								li 
-									p 
-										span.txt-bold Tình trạng máy   :  
-										span MÁY MỚI 100% NGUYÊN SEALBOX CHƯA 
-								li 
-									p 
-										span.txt-bold Bảo hành&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp:
-										span 18 tháng tại 365 Mobile. 15 ngày đầu tiên đổi máy mới nếu có lỗi của  nhà sản xuất.
-								li 
-									p 
-										span.txt-bold Sản phẩm gồm&nbsp: 
-										span Máy, Sạc, Cáp usb, Tai nghe, Tài liệu hướng dẫn, Hộp
-								li 
-									p 
-										span.txt-bold Lượt xem&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp: 
-										span 6190 lần
-							.div-shop-pay-blk
-								.row
-									.col-md-7
-										a(href="#")
-											.div-shop
-												p.txt-tit MUA NGAY, GIAO TẬN NƠI
-												p Nhận hàng mới trả tiền
-									.col-md-5
-										a(href="#")
-											.div-pay
-												p.txt-tit MUA TRẢ GÓP
-												p Chỉ 1.650.000 Đ
-							.store-blk
-								p.txt-store ĐANG CÓ HÀNG TẠI
-								.store-itm
-									li
-										p 185 Nguyễn Thiện Thuật, F.1, Q.3, TP. HCM . Có màu: Đỏ .
-									li
-										p 87 Xô Viết Nghệ Tĩnh, F.17, Q. Bình Thạnh, TP. HCM . Có màu: Đỏ .
-									li
-										p 62 Văn Cao, P. Liễu Giai, Q. Ba Đình, HN . Có màu: Đỏ .
-							.sell-off-blk
-								p.txt-sell-off KHUYỄN MÃI & QUÀ TẶNG
-								.sell-off-itm
-									ul
-										li
-											span.txt-bold Giảm 100k 
-											|cho khách mua từ lần thứ 2.
-										li
-											span.txt-bold Giảm 20% 
-											|cho khách mua kèm phụ kiện theo máy.
-										li
-											|Tặng dán màn hình từ tính 3 lớp.
-										li
-											|Tặng voucher mua hàng 100k khi mua sản phẩm. (có thể tặng bạn bè)
-										li
-											|Tặng phiếu dán màn hình thường 1 năm.
-										li
-											|Tặng sim ghép trị giá 200.000đ .
-										li
-											|Mua gói bảo hành vàng (bảo hành cả nguồn và màn hình): +300.000đ .
-									p * Lưu ý: Không bảo hành trong trường hợp máy bị rơi móp, máy dính hóa chất.
-							.payment-blk
-								p.txt-bold MIỄN PHÍ CHARGE THẺ KHI MUA HÀNG
-								img(alt=" " src="images/visa.png").img-visa
-					.tool-iphone-blk
-						p.txt-nomal PHỤ KIỆN TƯƠNG THÍCH VỚI
-						p.txt-tool.txt-bold iPhone 6s 32GB Global
-						.tab-prd.prd-img-blk
-							.col-prd-itm
-								a(href="detail.html")
-									img(alt=" " src="images/asus.png")
-									p.txt-name-prd Sony Xperia M4 Aqua Dual
-								p 
-									span.txt-new-price 6.490.000 đ 
-									span.txt-old-price 6.790.000 đ
-								span.promo.promo-dec-price
-							.col-prd-itm
-								a(href="detail.html")
-									img(alt=" " src="images/blackberry-classic11.png")
-									p.txt-name-prd Blackberry classic 11
-								p 
-									span.txt-new-price 6.490.000 đ 
-									span.txt-old-price 6.790.000 đ
-								span.promo.promo-new
-							.col-prd-itm
-								a(href="detail.html")
-									img(alt=" " src="images/samsung-galaxy-e5.png")
-									p.txt-name-prd Samsung Galaxy E5
-								p 
-									span.txt-new-price 6.490.000 đ 
-									span.txt-old-price 6.790.000 đ
-								span.promo.promo-hot
-								span.box-present
-									<i class="fa fa-gift" aria-hidden="true"></i>
-									|CÓ QUÀ
-							.col-prd-itm
-								a(href="detail.html")
-									img(alt=" " src="images/samsung-galaxy-note5.png")
-									p.txt-name-prd Samsung Galaxy Note5
-								a(href="detail.html")
-									.box-deposit
-										|ĐẶT TRƯỚC
-							.col-prd-itm
-								a(href="#")
-									img(alt=" " src="images/iphone6-plus.png")
-									p.txt-name-prd Iphone6 Plus
-								a(href="#")
-									.box-emp
-										|TẠM HẾT
-					.nav-tab-left.clearfix
-						.tabs-itm.f-l
-							ul(class="nav nav-tabs tabs-left")
-								li(class="active")
-									a(href="#home" data-toggle="tab")
-										|TỔNG QUAN
-								li
-									a(href="#profile" data-toggle="tab")
-										|THÔNG SỐ
-								li
-									a(href="#messages" data-toggle="tab")
-										|HÌNH ẢNH
-						.tab-content-itm.f-l
-							div(class="tab-content")
-								div(class="tab-pane active" id="home")
-									p.txt-tab-title iPhone 6 lock - Siêu phẩm lừng danh nhất nhì làng công nghệ.
-									p.txt-content Ngay từ khi chào sân đến nay, siêu phẩm iPhone 6 đến từ Apple vẫn luôn có sức hấp dẫn vô cùng mạnh mẽ, sở hữu thiết bị đình đám này trở thành mơ ước của rất nhiều các tín đồ công nghệ. Tuy nhiên, mức giá niêm yết khá cao khiến iPhone 6 chỉ dừng lại ở cảm giác của một “giấc mơ”.
-									figure
-										img(alt=" " src="images/img-tabs.png")
-								div(class="tab-pane" id="profile") THÔNG SỐ CHƯA CẬP NHẬT
-								div(class="tab-pane" id="messages") HÌNH ẢNH CHƯA CẬP NHẬT
-					.comment-itm
-						p.txt-cm
-							span.txt-bold 365
-							&nbsp Bình luận về iPhone 6s 32GB
-						textarea(class="form-control" rows="3" placeholder="Mời góp ý & thảo luận, vui lòng dùng tiếng Việt có dấu")
+		.container
+			.row
+				.col-md-8
+					.box
+						p Địa chỉ giao hàng
+						hr
+						form(class="form-input-address" action="order/create" method="POST")
+							input(type="hidden", name="nameprd", value="#{results[3].nameprd}")
+							input(type="hidden", name="price", value="#{results[3].price}")
+							.row
+								.col-md-6
+									.form-group
+										label Họ và tên
+										input.form-control(name="nameOrder", type='text', placeholder='Họ và tên người nhận')
+								.col-md-6
+									.form-group
+										label Số điện thoại
+										input.form-control(name="phoneOrder", type='text', placeholder='Số điện thoại người nhận')
+							.row
+								.col-md-6
+									.form-group
+										label Email
+										input.form-control(name="emailOrder", type='text', placeholder='Email người nhận')
+										
+								.col-md-6
+									.form-group
+										label Địa chỉ
+										input.form-control(name="houseOrder", type='text', placeholder='Số nhà')
+										
+							.row
+								.col-md-6
+									.form-group
+										label Đường
+										input.form-control(name="streetOrder", type='text', placeholder='Ví dụ: Quang Trung')
+										
+								.col-md-6
+									.form-group
+										label Phường / Xã
+										input.form-control(name="wardOrder", type='text', placeholder='Ví dụ: Phường 14')
+										
+							.row
+								.col-md-6
+									.form-group
+										label Quận / Huyện
+										input.form-control(name="districtOrder", type='text', placeholder='Ví dụ: Quận Gò Vấp')
+										
+								.col-md-6
+									.form-group
+										label Thành phố 
+										input.form-control(name="cityOrder", type='text', placeholder='Ví dụ: Thành phố Hồ Chí Minh')
+							input(type="hidden", name="_csrf", value=_csrf)
+							button.btn.btn-lg.btn-primary Cap nhat
+										
+	
+				.col-md-4
+					.box
+						p Thông tin sản phẩm
+						hr
+						.row
+							.col-md-5
+								span Tên sản phẩm
+							.col-md-7
+								span #{results[3].nameprd}
+						.row
+							.col-md-5
+								span Giá sản phẩm
+							.col-md-7
+								span #{results[3].price}
+			
+
+
 
