--- a/views/detail/list.jade
+++ b/views/detail/list.jade
@@ -17,7 +17,7 @@ block body
 			th
 		- each detail in details
 			tr(data-id=detail.id data-models="detail")
-				td= detail.owner
+				td= detail.owner.name
 
 				td= detail.nameprd
 				
