--- a/views/layoutadmin.jade
+++ b/views/layoutadmin.jade
@@ -30,9 +30,11 @@ html
 					+ Use a different or additional preprocessor, like SASS, SCSS or Stylus
 
 		// STYLES
+		link(rel="stylesheet", href="/styles/css/blocks/footer.css")
 		link(rel="stylesheet", href="/styles/css/bootstrap.min.css")
 		link(rel="stylesheet", href="/styles/css/custom.css")
 		link(rel="stylesheet", href="/styles/css/font-awesome.min.css")
+		link(rel="stylesheet", href="/styles/css/footer.css")
 		link(rel="stylesheet", href="/styles/css/header.css")
 		link(rel="stylesheet", href="/styles/css/main.css")
 		link(rel="stylesheet", href="/styles/css/morris.css")
@@ -243,6 +245,8 @@ html
 		script(src="/js/dependencies/sails.io.js")
 		script(src="/js/dependencies/aajquery.js")
 		script(src="/js/dependencies/bootstrap.min.js")
+		script(src="/js/dependencies/jquery.countdown.js")
+		script(src="/js/dependencies/jquery.countdown.min.js")
 		script(src="/js/dependencies/raphael.min.js")
 		script(src="/js/dependencies/start.js")
 		// SCRIPTS END
