--- a/assets/styles/css/header.css
+++ b/assets/styles/css/header.css
@@ -64,6 +64,7 @@
 	position: absolute;
 	top: 90px;
 	left: -10px;
+	z-index: 10;
 	transition: all 0.2s ease-out;
 	-moz-transition: all 0.2s ease-out;
 	-webkit-transition: all 0.2s ease-out;
