--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -16,6 +16,7 @@ h1 {
 a {
 	color: #96739f;
 	font-style: Georgia;
+	display: block;
 	text-decoration: none;
 }
 a:hover {
@@ -30,7 +31,92 @@ a:hover {
 	width: 100%;
 	clear: both;
 }
-/* MAIN MENU */
+/* PRODUCT ITM BLK */
+.prd-itm-blk {
+	background: #fff;
+	margin-bottom: 30px;
+	padding: 15px 0;
+}
+
+
+.prd-itm {
+	border: 1px solid #333;
+	text-align: center;
+	font-size: 18px;
+	padding: 15px 0;
+	position: relative;
+}
+.prd-itm  a:hover .itm-meta {
+	opacity: 1;
+}
+.itm-meta {
+	position: absolute;
+	display: block;
+	color: #e6d8cd;
+	text-align: center;
+	font-weight: bold;
+	bottom: 0;
+	top: 0;
+	right: 0;
+	left: 0;
+	opacity: 0;
+}
+.time-off {
+	position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 28px;
+    padding: 4px 10px;
+    background: rgba(0, 0, 0, 0.55);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+.btn-buy-now {
+	padding: 6px 12px;
+    width: 110px;
+    height: 34px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -55px;
+    margin-top: -17px;
+    line-height: 22px;
+    font-size: 14px;
+    font-weight: 700;
+    text-decoration: none;
+    background: #73bc28;
+    color: #FFF;
+    text-transform: uppercase;
+    text-align: center;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+}
 .img-prd {
 	height: 200px;
+}
+.prd-title {
+	display: block;
+}
+.full-prd {
+	padding: 6px 15px 6px 15px;
+    background-color: #ffffff;
+    color: #666;
+    font-size: 15px;
+    text-align: center;
+    margin: 15px 0;
+}
+.txt-new-price {
+	color: #ed1c24;
+	font-size: 25px;
+}
+
+
+/* DEAL ITM BLK */
+.box {
+	background: #e1e1e1;
+	border: 1px solid #dddddd;
+	padding: 30px;
+	margin-bottom: 30px;
 }
