--- a/views/order/tempOrder.jade
+++ b/views/order/tempOrder.jade
@@ -1,1 +1,7 @@
-h1 email da dc gui
+block vars
+	-title="Hotdeal.vn"
+extends ../layouts/layout
+block main  
+	.hm-sec-blk
+		.container
+			h3 Cảm ơn quý khách đã đặt mua sản phẩm của chúng tôi. Mọi chi tiết về đơn đặt hàng chúng tôi đã gửi qua email của quý khách. Xin chân thành cảm ơn.
