--- a/views/detail/new.jade
+++ b/views/detail/new.jade
@@ -6,29 +6,41 @@ block body
 	h2 Detail products
 	hr
 	form.form-sign-up(name="newprd" action="/detail/create", method="POST", enctype="multipart/form-data")
-		.form-group
-			label Category product
-			select(name="owner")
-				- each cate in cates
-					option(value= "#{cate.id}") #{cate.name}
-		.form-group
-			label Name
-			input.form-control(type="text", name="nameprd", placeholder="Name product")
-		.form-group
-			label Price(VND)
-			input.form-control(type="text", name="price", placeholder="Price product")
-		.form-group
-			label Image product
-			input(type="file", name="image", id="image_prd_detail")
-		.form-group
-			label Descrice
-			textarea.form-control(name="descrice" rows="3")
-		.form-group
-			label Number
-			input.form-control(type="text", name="number", placeholder="Number product")
-		.form-group
-			label Date deadline (YYYY/MM/DD hh:mm:ss)
-			input.form-control(type="text", name="dateOff", placeholder="Time count dowm")
+		.row
+			.col-md-6
+				.form-group
+					label Category product
+					select(name="owner")
+						- each cate in cates
+							option(value= "#{cate.id}") #{cate.name}
+			.col-md-6
+				.form-group
+					label Name
+					input.form-control(type="text", name="nameprd", placeholder="Name product")
+		.row
+			.col-md-6
+				.form-group
+				label Price(VND)
+				input.form-control(type="text", name="price", placeholder="Price product")
+			.col-md-6
+				.form-group
+					label Image product
+					input(type="file", name="image", id="image_prd_detail")
+		.row
+			.col-md-6
+				.form-group
+					label Descrice
+					textarea.form-control(name="descrice" rows="3")
+			.col-md-6
+				.form-group
+					label Number
+					input.form-control(type="text", name="number", placeholder="Number product")
+		.row
+			.col-md-6
+				.form-group
+					label Date deadline (YYYY/MM/DD hh:mm:ss)
+					input.form-control(type="text", name="dateOff", placeholder="Time count dowm")
+			.col-md-6
 		.submit-btn
 			button.btn.btn-primary(type="submit") Create
 		input(type="hidden", name="_csrf", value=_csrf)
